# blog

./: .env  .gitignore  .mcp.json  .out  AGENTS.md  Cargo.toml  README.md  build.rs  flake.nix  justfile  notes.rst  server-setup.sh  setup-blog.sh  setup.py  site.toml  site.toml.example  zappa_settings.json
.claude/: CLAUDE.md  settings.local.json
app/: __init__.py  app.py  cli.py  config.py  devapp.py  extensions.py
app/blueprints/blog/: models.py  views.py
app/blueprints/blog/templates/blog/: index.html
app/blueprints/page/: __init__.py  views.py
app/templates/: base.html
content/: about.org
content/posts/: creating-a-blog-with-ai.org  getting-started.org  hello-world.org  nix-on-macos.org
src/: lib.rs  main.rs  server.rs
src/handlers/: about.rs  index.rs  mod.rs  not_found.rs  post.rs  rss.rs  search.rs  sitemap.rs  static_files.rs
src/models/: app_state.rs  config.rs  mod.rs  post.rs  search.rs
src/parsing/: mod.rs  parser.rs  syntect_handler.rs
src/utils/: excerpt.rs  html.rs  mod.rs
static/: robots.txt  script.js  sitemap.xml  style.css
templates/: 404.html  about.html  base.html  index.html  post.html  search.html
tests/: integration.rs
tests/integration/: handlers_tests.rs  parsing_tests.rs
