[package]
name = "blog-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
askama = "0.12"
askama_axum = "0.4"
orgize = "0.9"
syntect = "5.2"
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "compression-gzip"] }
mime_guess = "2.0"
regex = "1.10"

[build-dependencies]
