[package]
name = "blog-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
askama = "0.15"
orgize = "0.9"
syntect = "5.2"
rust-embed = "8.5"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
chrono = "0.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "compression-gzip"] }
mime_guess = "2.0"
regex = "1.10"
html-escape = "0.2"
tower_governor = { version = "0.8", features = ["axum"] }
anyhow = "1.0"
rss = "2.0.12"

[dev-dependencies]
pretty_assertions = "1.4"
axum-test = "18.5"
tokio-test = "0.4"

[build-dependencies]
chrono = "0.4"
